<?xml version="1.0"?>
<package format="2">
  <name>dv_tracker</name>
  <version>0.0.0</version>
  <description>The dv_tracker package</description>

  <maintainer email="oriol.martinez.fite@gmail.com">fetty</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dv_common</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>dv_common</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>dv_common</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

      <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}"/>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
